commit messagerie qui marche

--- a/Logos_Front/src/main/webapp/messagerie_professeur.xhtml
+++ b/Logos_Front/src/main/webapp/messagerie_professeur.xhtml
@@ -10,7 +10,7 @@
 			<h:form>
 				<h:panelGroup id="messages-conversation" layout="block" styleClass="col-sm-8 ">
 					<div class="messages-affiche">
-						<div class="messages">
+						<h:panelGroup layout="block" id="les-messages" styleClass="messages">
 							<h3 id="titreConversation">#{messagerieMB.conversationEnCours.titre}</h3>
 							<ui:repeat var="m"
 								value="#{messagerieMB.allMessagesByConversation}">
@@ -21,7 +21,7 @@
 									<h:outputLabel styleClass="contenuMessage" value="#{m.contenu}" />
 								</h:panelGroup>
 							</ui:repeat>
-						</div>
+						</h:panelGroup>><!-- .messages -->
 						<div class="ecrire-message">
 							<div id="champs-envoi-div">
 								<h:inputTextarea id="champsEnvoi"
@@ -36,7 +36,7 @@
 								<h:commandButton styleClass="btn btn-default btn-rafraichir"
 									action="#{messagerieMB.rafraichirMessages()}"
 									value="Rafraichir">
-									<f:ajax render="messages-conversation" />
+									<f:ajax render="les-messages" />
 								</h:commandButton>
 							</div>
 						</div>
@@ -68,7 +68,7 @@
 			</h:form>
 		</div>
 
-		<script type="text/javascript" src="../js/jquery.js"></script>
+		
 		<script type="text/javascript" src="../js/messagerie.js"></script>
 	</ui:define>
 </ui:composition>
