--- a/Logos_Front/src/main/webapp/cours.xhtml
+++ b/Logos_Front/src/main/webapp/cours.xhtml
@@ -5,134 +5,161 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-	<ui:composition template="/WEB-INF/template-eleve.xhtml">
-		<ui:define name="titre">#{mbConsulteCours.coursEnCours.titre}</ui:define>
-		<ui:define name="scriptsEtCss">
-			<script src="../js/question.js"></script>
-			<script src="../js/questionDAD.js"></script>
-			<script src="../js/ui/jquery-ui.min.js"></script>
-			<style>
-			.ui-droppable-hover {background-color: pink; }
-			.wrap-input-drop {background: red; height: 30px; width:150px;display:inline-block; }
-			.wrap-input-drag{width:150px;text-align: center;}
-			
-			</style>
-		</ui:define>
-		<ui:define name="contenu">
-			<h:form>
-				<h1>
-					<h:outputText value="#{mbConsulteCours.coursEnCours.titre}" />
-				</h1>
+<ui:composition template="/WEB-INF/template-eleve.xhtml">
+	<ui:define name="titre">#{mbConsulteCours.coursEnCours.titre}</ui:define>
+	<ui:define name="scriptsEtCss">
+		<script src="../js/question.js"></script>
+		<script src="../js/questionDAD.js"></script>
+		<script src="../js/ui/jquery-ui.min.js"></script>
+		<style>
+.ui-droppable-hover {
+	background-color: pink;
+}
 
-				<h2>
-					<h:outputText value="#{mbConsulteCours.chapitreEnCours.titre}" />
-				</h2>
+.wrap-input-drop {
+	background: red;
+	height: 30px;
+	width: 150px;
+	display: inline-block;
+}
 
-				<div>
-					<h:outputText value="#{mbConsulteCours.chapitreEnCours.contenu}"
-						escape="false" />
-				</div>
-				<div id="evaluation">
-					<h:outputText
-						value="#{mbConsulteCours.getPremiereEvaluation().titre}" />
-					<div id="questions">
-						<ui:repeat var="q" value="#{mbConsulteCours.questionsExercice}">
+.wrap-input-drag {
+	width: 150px;
+	text-align: center;
+}
+</style>
+	</ui:define>
+	<ui:define name="contenu">
+		<h:form>
+			<h1>
+				<h:outputText value="#{mbConsulteCours.coursEnCours.titre}" />
+			</h1>
 
+			<h2>
+				<h:outputText value="#{mbConsulteCours.chapitreEnCours.titre}" />
+			</h2>
+
+			<div>
+				<h:outputText value="#{mbConsulteCours.chapitreEnCours.contenu}"
+					escape="false" />
+			</div>
+			<div id="evaluation">
+				<h:outputText
+					value="#{mbConsulteCours.getPremiereEvaluation().titre}" />
+				<h:outputText rendered="#{mbConsulteCours.envoye}" value="SALUT" />
+				<div id="questions">
+					<ui:repeat var="q" value="#{mbConsulteCours.questionsExercice}">
+
+						<h:panelGroup
+							rendered="#{q['class'].simpleName == 'QuestionOuverte'}">
+							<h5>#{q.enonce}</h5>
+							<h:inputTextarea
+								valueChangeListener="#{mbConsulteCours.addReponseOuverte}">
+								<f:attribute name="question" value="#{q}" />
+							</h:inputTextarea>
+						</h:panelGroup>
+
+						<h:panelGroup rendered="#{q['class'].simpleName == 'QuestionQcm'}">
+							<h5>#{q.enonce}</h5>
+							<h:outputText rendered="#{mbConsulteCours.envoye}"
+								value="#{mbConsulteCours.correctionsEleves.get(q.idQuestion-2)?'bonne réponse':'faux'}" />
+
+							<h:selectManyCheckbox
+								value="#{mbConsulteCours.propositionQcmVide}"
+								valueChangeListener="#{mbConsulteCours.addReponseQcm}">
+								<f:selectItems itemLabel="#{p}" var="p"
+									value="#{mbConsulteCours.getPropositionQcm(q)}"
+									itemValue="#{p}" />
+								<f:attribute name="question" value="#{q}" />
+							</h:selectManyCheckbox>
+
+						</h:panelGroup>
+						<h:panelGroup
+							rendered="#{q['class'].simpleName == 'QuestionATrous'}">
+							<h5>#{q.enonce}</h5>
+							<h:outputText rendered="#{mbConsulteCours.envoye}"
+								value="#{mbConsulteCours.correctionsEleves.get(q.idQuestion-2)?'bonne réponse':'faux'}" />
 							<h:panelGroup
-								rendered="#{q['class'].simpleName == 'QuestionOuverte'}">
-								<h5>#{q.enonce}</h5>
-								<h:inputTextarea
-									valueChangeListener="#{mbConsulteCours.addReponseOuverte}">
-									<f:attribute name="question" value="#{q}" />
-								</h:inputTextarea>
+								styleClass="zone-phrase-trous question-#{q.idQuestion}"
+								layout="block">
+								<div class="phrase">
+									<h:outputText
+										value="#{mbConsulteCours.getPhraseATrousQuestion(q)}"></h:outputText>
+								</div>
+								<div class="inputs">
+									<ui:repeat var="f"
+										value="#{mbConsulteCours.propositionPhraseATrou}">
+										<span class="wrap-input"><h:inputText
+												valueChangeListener="#{mbConsulteCours.getRepATrouEleve}">
+												<f:attribute name="question" value="#{q}" />
+											</h:inputText></span>
+									</ui:repeat>
+								</div>
 							</h:panelGroup>
+						</h:panelGroup>
 
+						<h:panelGroup
+							rendered="#{q['class'].simpleName == 'QuestionDragAndDrop'}">
+							<h5>#{q.enonce}</h5>
+							<h:outputText rendered="#{mbConsulteCours.envoye}"
+								value="#{mbConsulteCours.correctionsEleves.get(q.idQuestion-2)?'bonne réponse':'faux'}" />
 							<h:panelGroup
-								rendered="#{q['class'].simpleName == 'QuestionQcm'}">
-								<h5>#{q.enonce}</h5>
-								<h:selectManyCheckbox
-									value="#{mbConsulteCours.propositionQcmVide}"
-									valueChangeListener="#{mbConsulteCours.addReponseQcm}">
-									<f:selectItems itemLabel="#{p}" var="p"
-										value="#{mbConsulteCours.getPropositionQcm(q)}"
-										itemValue="#{p}" />
-									<f:attribute name="question" value="#{q}" />
-								</h:selectManyCheckbox>
-
-							</h:panelGroup>
-							<h:panelGroup
-								rendered="#{q['class'].simpleName == 'QuestionATrous'}">
-								<h5>#{q.enonce}</h5>
-								<h:panelGroup
-									styleClass="zone-phrase-trous question-#{q.idQuestion}"
-									layout="block">
-									<div class="phrase">
-										<h:outputText
-											value="#{mbConsulteCours.getPhraseATrousQuestion(q)}"></h:outputText>
-									</div>
-									<div class="inputs">
-										<ui:repeat var="f"
-											value="#{mbConsulteCours.propositionPhraseATrou}">
-											<span class="wrap-input"><h:inputText
-													valueChangeListener="#{mbConsulteCours.getRepATrouEleve}">
+								styleClass="zone-drag-drop question-#{q.idQuestion}"
+								layout="block">
+								<div class="phrase">
+									<h:outputText value="#{mbConsulteCours.getQuestionDAD(q)}"></h:outputText>
+								</div>
+								<div class="inputs-drop">
+									<ui:repeat var="f"
+										value="#{mbConsulteCours.propositionPhraseDAD}">
+										<div class="drop">
+											<div class="wrap-input-drop">
+												<h:inputHidden
+													valueChangeListener="#{mbConsulteCours.getRepDAD}"
+													data-hidden="hidden">
 													<f:attribute name="question" value="#{q}" />
-												</h:inputText></span>
-										</ui:repeat>
-									</div>
-								</h:panelGroup>
+												</h:inputHidden>
+											</div>
+										</div>
+									</ui:repeat>
+								</div>
+								<div class="inputs-drag">
+									<ui:repeat var="f"
+										value="#{mbConsulteCours.propositionPhraseDAD}">
+										<div class="wrap-input-drag" data-drag="drag">
+											<h:outputText value="#{f}">
+
+											</h:outputText>
+										</div>
+									</ui:repeat>
+								</div>
 							</h:panelGroup>
+							<h:commandButton action="submit"
+								actionListener="#{mbConsulteCours.envoiReponses}"
+								value="VALIDER" />
+						</h:panelGroup>
 
-							<h:panelGroup
-								rendered="#{q['class'].simpleName == 'QuestionDragAndDrop'}">
-								<h5>#{q.enonce}</h5>
-								<h:panelGroup
-									styleClass="zone-drag-drop question-#{q.idQuestion}"
-									layout="block">
-									<div class="phrase">
-										<h:outputText
-											value="#{mbConsulteCours.getQuestionDAD(q)}"></h:outputText>
-									</div>
-									<div class="inputs-drop">
-										<ui:repeat var="f"
-											value="#{mbConsulteCours.propositionPhraseDAD}">
-											<div class="drop"><div class="wrap-input-drop" ><h:inputHidden valueChangeListener="#{mbConsulteCours.getRepDAD}" data-hidden="hidden" >
-											<f:attribute name="question" value="#{q}" />
-											</h:inputHidden></div></div>
-										</ui:repeat>
-									</div>
-									<div class="inputs-drag">
-										<ui:repeat var="f"
-											value="#{mbConsulteCours.propositionPhraseDAD}">
-											<div class="wrap-input-drag" data-drag="drag"><h:outputText  value="#{f}" >
-												
-											</h:outputText></div>
-										</ui:repeat>
-									</div>
-								</h:panelGroup>
-
-							</h:panelGroup>
-
-						</ui:repeat>
-					</div>
+					</ui:repeat>
 				</div>
-				<h:commandButton action="submit" actionListener="#{mbConsulteCours.envoiReponses}" value="VALIDER" />
-				<nav aria-label="...">
-				<ul class="pager">
+			</div>
 
-					<li id="previous"><h:commandLink
-							action="#{mbConsulteCours.changerChapitre(-1)}"
-							value="Chapitre précédent"
-							rendered="#{mbConsulteCours.chapitreEnCours ne mbConsulteCours.listeChapitre.get(0)}" /></li>
-					<li id="next"><h:commandLink
-							action="#{mbConsulteCours.changerChapitre(1)}"
-							value="Chapitre suivant"
-							rendered="#{mbConsulteCours.indexCourant ne mbConsulteCours.listeChapitre.size()-1}" /></li>
+			<nav aria-label="...">
+			<ul class="pager">
 
-				</ul>
-				</nav>
-			</h:form>
-		</ui:define>
-	</ui:composition>
+				<li id="previous"><h:commandLink
+						action="#{mbConsulteCours.changerChapitre(-1)}"
+						value="Chapitre précédent"
+						rendered="#{mbConsulteCours.chapitreEnCours ne mbConsulteCours.listeChapitre.get(0)}" /></li>
+				<li id="next"><h:commandLink
+						action="#{mbConsulteCours.changerChapitre(1)}"
+						value="Chapitre suivant"
+						rendered="#{mbConsulteCours.indexCourant ne mbConsulteCours.listeChapitre.size()-1}" /></li>
+
+			</ul>
+			</nav>
+		</h:form>
+	</ui:define>
+</ui:composition>
 
 <body>
 
