--- a/Logos_Front/src/main/webapp/messagerie_eleve.xhtml
+++ b/Logos_Front/src/main/webapp/messagerie_eleve.xhtml
@@ -6,7 +6,7 @@
 <ui:composition template="/WEB-INF/template-eleve.xhtml">
 	<ui:define name="titre">Bienvenue</ui:define>
 	<ui:define name="contenu">
-		<div class="conversation col-sm-offset-1">
+		<div class="conversation">
 			<h:form>
 				<h:panelGroup id="messages-conversation" layout="block" styleClass="col-sm-8 ">
 					<div class="messages-affiche">
@@ -44,8 +44,10 @@
 							</div>
 						</div>
 					</div>
+				
+					<div style="clear: both;" >&nbsp;</div>
 				</h:panelGroup>
-				<div class="col-sm-offset-1 col-sm-3 conversations">
+				<div class="col-sm-4 conversations">
 					<h2>Mes conversations</h2>
 					<div class="list-group">
 						<ui:repeat var="c" value="#{messagerieMB.conversations}">
