--- a/Logos_Front/src/main/webapp/messagerie_professeur.xhtml
+++ b/Logos_Front/src/main/webapp/messagerie_professeur.xhtml
@@ -44,8 +44,11 @@
 							</div>
 						</div>
 					</div>
+					
+					
+					<div style="clear: both;" >&nbsp;</div>
 				</h:panelGroup>
-				<div class="col-sm-offset-1 col-sm-3 conversations">
+				<div class="col-sm-4 conversations">
 					<h2>Mes conversations</h2>
 					<div class="list-group">
 						<ui:repeat var="c" value="#{messagerieMB.conversations}">
