--- a/Logos_Front/src/main/webapp/inscription_cours2.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_cours2.xhtml
@@ -34,7 +34,7 @@
 						<b>Vous avez atteint votre quota de cours</b><br /> Pour vous inscrire à plus de trois cours,
 						nous vous invitons à <a href="#" onclick="return false">devenir membre premium</a>
 					</p>
-				</h:panelGroup>>
+				</h:panelGroup>
 				<div class="panel panel-default">
 					<div class="panel-heading">Recommandés pour vous</div>
 					<div class="panel-body">
