--- a/Logos_Front/src/main/webapp/messagerie_eleve.xhtml
+++ b/Logos_Front/src/main/webapp/messagerie_eleve.xhtml
@@ -33,7 +33,7 @@
 							</div>
 							<div>
 								<h:commandButton action="#{messagerieMB.envoyerMessage()}"
-									styleClass="btn btn-default envoyer" value="Envoyer">
+									styleClass="btn btn-primary envoyer" value="Envoyer">
 									<f:ajax execute="champsEnvoi" render="messages-conversation" />
 								</h:commandButton>
 								<h:commandButton styleClass="btn btn-default btn-rafraichir"
