--- a/Logos_Front/src/main/webapp/messagerie_professeur.xhtml
+++ b/Logos_Front/src/main/webapp/messagerie_professeur.xhtml
@@ -6,7 +6,7 @@
 <ui:composition template="/WEB-INF/template-prof.xhtml">
 	<ui:define name="titre">Bienvenue</ui:define>
 	<ui:define name="contenu">
-		<div class="conversation col-sm-offset-1">
+		<div class="conversation ">
 			<h:form>
 				<h:panelGroup id="messages-conversation" layout="block" styleClass="col-sm-8 ">
 					<div class="messages-affiche">
@@ -33,7 +33,7 @@
 							</div>
 							<div>
 								<h:commandButton action="#{messagerieMB.envoyerMessage()}"
-									styleClass="btn btn-default envoyer" value="Envoyer">
+									styleClass="btn btn-primary envoyer" value="Envoyer">
 									<f:ajax execute="champsEnvoi" render="messages-conversation" />
 								</h:commandButton>
 								<h:commandButton styleClass="btn btn-default btn-rafraichir"
