--- a/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
+++ b/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
@@ -23,7 +23,7 @@
 <body class="window">
 	<div class="container-fluid">
 		<div class="row">
-			<div id="aside" class="col-sm-2 prof">
+			<div id="aside" class="col-md-3 col-lg-2 prof">
 				<h:form>
 					<div id="asideContent">
 						<div id="divLogin">
@@ -41,8 +41,8 @@
 						</div>
 						<div id="nav">
 							<ul id="profilMenu">
-								<li><span class="glyphicon glyphicon-copy"></span>Suivi</li>
-								<li><span class="glyphicon glyphicon-book"></span>Cours</li>
+								<li><span class="glyphicon glyphicon-copy"></span><a href="#" onclick="return false" >Suivi</a></li>
+								<li><span class="glyphicon glyphicon-book"></span><a href="#" onclick="return false" >Cours</a></li>
 								<li>
 									<span class="glyphicon glyphicon-envelope"></span><h:link outcome="messagerie_professeur.xhtml">Messages</h:link>
 									&nbsp;
@@ -51,15 +51,15 @@
 										<h:outputText    value="#{messagerieMB.nbNouveauxMessages}" />
 									</h:panelGroup>									
 								</li>
-								<li><span class="glyphicon glyphicon-edit"></span>Corrections
-									<p class="badge">3</p></li>
+								<li><span class="glyphicon glyphicon-edit"></span><a href="#" onclick="return false" >Corrections
+									<span class="badge">3</span></a></li>
 							</ul>
 						</div>
 						<h:commandButton action="#{messagerieMB.updateNombreMessagesNonLus()}" value="Refresh" styleClass="btn-refresh-nb-messages"><f:ajax render="nb-messages"></f:ajax></h:commandButton>
 					</div>
 				</h:form>
 			</div>
-			<div class="col-sm-10">
+			<div class="col-md-9 col-lg-10">
 				<ui:insert name="contenu" />
 			</div>
 		</div>
